add SocketConnectionAutoConfiguration